# CellGuard

./: .gitignore  .gitlab-ci.yml  CCTManager.h  CCTManager.m  Cargo.toml  Makefile  Pipfile  README.md  Tweak.x  build.rs  control
AnalyzeCells/: Pipfile  README.md  pyproject.toml  (+1 more)
CellGuardAppRust/: Cargo.toml  README.md  build.rs
CellGuardAppRust/src/: csv_parser.rs  lib.rs
CellGuardAppSwift/: .gitignore  .swift-format.json  .swiftlint.yml  BridgingHeader.h  Makefile  Pipfile  PrivacyInfo.xcprivacy  README.md  build-rust.sh  build_ipa.py  cellGuardEntitlements.xml  entitlements-deb.plist  entitlements-trollstore.plist  generate_ari_json.py  generate_operators.py  pyproject.toml
CellGuardAppSwift/CellGuard/: AppleURLs.swift  CellGuardApp.swift  CellGuardAppDelegate.swift  CellGuardSceneDelegate.swift  Info.plist  SwiftExtensions.swift  UserDefaultsKeys.swift
CellGuardAppSwift/CellGuard.xcodeproj/: project.pbxproj
CellGuardAppSwift/CellGuard.xcodeproj/xcshareddata/xcschemes/: CellGuard (AppStore).xcscheme  CellGuard (Jailbreak).xcscheme
CellGuardAppSwift/CellGuard/API/: CellGuardURLs.swift  StudyClient.swift  StudyClientSamples.swift  StudyClientScores.swift  StudyPacketFilter.swift  StudyTask.swift
CellGuardAppSwift/CellGuard/AppIcon.icon/: icon.json
CellGuardAppSwift/CellGuard/Apple Location Service/: ALSClient.swift  ALSTechnology.swift  CoreLocationALS.pb.swift
CellGuardAppSwift/CellGuard/Assets.xcassets/AppIcon.appiconset/: Contents.json
CellGuardAppSwift/CellGuard/Cells/: .gitignore  CellIdentification.swift  OperatorDefinitions.swift
CellGuardAppSwift/CellGuard/Core Data/: LocationSource.swift  PersistenceController.swift  PersistencePreview.swift  PreviewInfo.swift
CellGuardAppSwift/CellGuard/Locations/: LocationDataManager.swift  TrackedUserLocation.swift
CellGuardAppSwift/CellGuard/Notifications/: CGNotificationManager.swift  UpdateCheckTask.swift
CellGuardAppSwift/CellGuard/System Diagnoses/: LogArchiveReader.swift  ProfileScanner.swift  ProfileTask.swift  SysdiagTask.swift
CellGuardAppSwift/CellGuard/Tweaks/: TweakAuthManager.h  TweakAuthManager.m  TweakClient.swift
CellGuardAppSwift/CellGuard/User Interface/: HomeTabView.swift  NavigationDestinations.swift
CellGuardAppSwift/CellGuardTests/: CellGuardTests.swift  TestPlan.xctestplan
CellGuardAppSwift/CellGuardTests/Apple Location Service/: ALSClientTests.swift  ALSVerifierTests.swift
CellGuardAppSwift/CellGuardTests/System DIagnoses/: LogArchiveReaderTests.swift
CellGuardAppSwift/CellGuardUITests/: CellGuardUITestsLaunchTests.swift
CellGuardAppSwift/Config/: .gitignore  Config.xcconfig  Developer.xcconfig.template  Version.xcconfig
CellGuardAppSwift/layout/DEBIAN/: control
(+473 files in other folders)
