[package]
name = "cellguard"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
swift-bridge-build = "0.1"

[lib]
crate-type = ["staticlib"]

[dependencies]
swift-bridge = "0.1"
macos-unifiedlogs = "0.1.1"
csv = "1.3.1"

# Apply some basic optimization even for the development mode, otherwise the QMI import is way too slow
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 2
