[project]
name = "CellGuardAppSwift"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "yaspin",
    "luaparser",
    "beautifulsoup4",
    "requests",
    "pandas",
    "lxml",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
