[project]
name = "CellGuardAppSwift"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "yaspin",
    "beautifulsoup4",
    "requests",
    "pandas",
    "lxml",
    "luaparser",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
luaparser = { git = "https://github.com/boolangery/py-lua-parser", rev = "3.3.1" }
